--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -141,7 +141,7 @@ jobs:
       - name: Install nightly
         uses: dtolnay/rust-toolchain@nightly
       - name: cargo doc
-        run: cargo doc --no-deps --all-features
+        run: cargo doc --no-deps -F mec1723n_b0_sz
         env:
           RUSTDOCFLAGS: --cfg docsrs
 
@@ -155,6 +155,13 @@ jobs:
       fail-fast: false
       matrix:
         commit: ${{ fromJSON(needs.commit_list.outputs.commits) }}
+        partno: [ "cec1712h_b2_sx", "cec1712h_n2_sx",
+  "cec1712h_s2_sx", "cec1734_s0_2hw", "cec1734_s0_2zw",
+  "cec1736_s0_2hw", "cec1736_s0_2zw", "mec1721n_b0_lj",
+  "mec1721n_b0_sz", "mec1723n_b0_lj", "mec1723n_b0_sz",
+  "mec1723n_f0_sz", "mec1723n_p0_9y", "mec1724n_b0_lj",
+  "mec1724n_b0_sz", "mec1725n_b0_lj", "mec1727n_b0_sz" ]
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -166,8 +173,8 @@ jobs:
         uses: taiki-e/install-action@cargo-hack
       # intentionally no target specifier; see https://github.com/jonhoo/rust-ci-conf/pull/4
       # --feature-powerset runs for every combination of features
-      - name: cargo hack
-        run: cargo hack --feature-powerset check
+      - name: cargo (manual) hack
+        run: cargo check -F ${{ matrix.partno }}
 
   deny:
     # cargo-deny checks licenses, advisories, sources, and bans for
@@ -192,7 +199,7 @@ jobs:
           log-level: warn
           manifest-path: ./Cargo.toml
           command: check
-          arguments: --all-features
+          arguments: --features mec1723n_b0_sz
 
   msrv:
     # check that we can build using the minimal rust version that is specified by this crate
@@ -204,17 +211,7 @@ jobs:
       fail-fast: false
       matrix:
         commit: ${{ fromJSON(needs.commit_list.outputs.commits) }}
-        msrv: ["1.79"] # We're relying on namespaced-features, which
-                       # was released in 1.60
-                       #
-                       # We also depend on `fixed' which requires rust
-                       # 1.71
-                       #
-                       # Additionally, we depend on embedded-hal-async
-                       # which requires 1.75
-                       #
-                       # embassy-time requires 1.79 due to
-                       # collapse_debuginfo
+        msrv: ["1.85"]
     name: ubuntu / ${{ matrix.msrv }} (${{ matrix.commit }})
     steps:
       - uses: actions/checkout@v4
@@ -226,4 +223,4 @@ jobs:
         with:
           toolchain: ${{ matrix.msrv }}
       - name: cargo +${{ matrix.msrv }} check
-        run: cargo check
+        run: cargo check -F mec1723n_b0_sz
