add basic readme text

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = [ "Felipe Balbi <febalbi@microsoft.com>" ]
 edition = "2021"
 license = "MIT"
-description = "Peripheral Access Crate for Microchip ;mcu devices"
+description = "Peripheral Access Crate for Microchip MCU Devices"
 repository = "https://github.com/OpenDevicePartnership/microchip-pac"
 readme = "README.md"
 keywords = [ "microchip", "mec17", "mec172", "no_std", "embedded" ]
