--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -174,7 +174,7 @@ jobs:
       # intentionally no target specifier; see https://github.com/jonhoo/rust-ci-conf/pull/4
       # --feature-powerset runs for every combination of features
       - name: cargo (manual) hack
-        run: cargo check -F ${{ matrix.partno }}
+        run: cargo check -F rt,${{ matrix.partno }} --no-default-features
 
   deny:
     # cargo-deny checks licenses, advisories, sources, and bans for
