--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mec17xx-pac"
-version = "0.1.2"
+version = "0.1.3"
 authors = [ "Felipe Balbi <febalbi@microsoft.com>" ]
 edition = "2021"
 license = "MIT"
@@ -18,7 +18,7 @@ cortex-m-rt = { version = ">=0.7.5,<0.8", optional = true }
 defmt = { version = "1.0", optional = true }
 
 [features]
-default = ["rt", "mec1723n_b0_sz"]
+default = ["rt"]
 rt = ["cortex-m-rt/device"]
 defmt = ["dep:defmt"]
 
